fix: align asides to grid

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,7 +3,7 @@
 
 :root {
   --size-layout-content-narrow: 575px;
-  --space-layout-aside: 37px;
+  --space-layout-aside: 32px;
 }
 
 html,
